--- a/ai_2048/app/src/main/res/values/strings.xml
+++ b/ai_2048/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ai_2048</string>
+    <string name="title_player_mode">Player Mode</string>
+    <string name="title_ai_mode">AI mode</string>
+    <string name="tag_score"><![CDATA[ Score : <b><font color=#F44336>%1$d</b> ]]></string>
 </resources>
