--- a/ai_2048/app/src/main/res/values/strings.xml
+++ b/ai_2048/app/src/main/res/values/strings.xml
@@ -2,5 +2,15 @@
     <string name="app_name">ai_2048</string>
     <string name="title_player_mode">Player Mode</string>
     <string name="title_ai_mode">AI mode</string>
+    <string name="title_new_game">New Game</string>
+    <string name="title_game_over">Game Over</string>
+
+    <string name="info_new_game">Reset and have a new game?</string>
+    <string name="info_game_reseted">Enjoy your new name!</string>
+    <string name="info_game_over">No more available move :(</string>
+
+    <string name="btn_confirm">confirm</string>
+    <string name="btn_cancel">cancel</string>
+
     <string name="tag_score"><![CDATA[ Score : <b><font color=#F44336>%1$d</b> ]]></string>
 </resources>
