--- a/ai_2048/app/src/main/res/values/strings.xml
+++ b/ai_2048/app/src/main/res/values/strings.xml
@@ -1,9 +1,12 @@
 <resources>
     <string name="app_name">2048 with AI</string>
     <string name="activity_settings">Settings Activity</string>
+    <string name="activity_help">Help Activity</string>
+
     <string name="title_player_mode">Player Mode</string>
     <string name="title_ai_mode">AI mode</string>
     <string name="title_settings">Settings</string>
+    <string name="title_help">Help</string>
     <string name="title_new_game">New Game</string>
     <string name="title_game_over">Game Over</string>
 
