animation speed setting

--- a/ai_2048/app/src/main/res/values/strings.xml
+++ b/ai_2048/app/src/main/res/values/strings.xml
@@ -14,6 +14,9 @@
     <string name="info_game_reseted">Enjoy your new game!</string>
     <string name="info_game_over">No more available move :(</string>
     <string name="info_ai_depth">More Powerful AI\n(AI will try to look 2 steps further)</string>
+    <string name="info_slow_animation">Slower Animation Speed</string>
+    <string name="info_normal_animation">Normal Animation Speed</string>
+    <string name="info_fast_animation">Faster Animation Speed</string>
 
     <string name="btn_confirm">Confirm</string>
     <string name="btn_cancel">Cancel</string>
